fix: add 'target: _blank' for link and change column width from 1fr to 100% on small screens

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -33,7 +33,7 @@
 
   @media screen and (max-width: 540px) {
     margin-top: 60px;
-    grid-template-columns: 1fr;
+    grid-template-columns: 100%;
     grid-template-rows: auto;
     grid-template-areas:
       'avatar'
@@ -129,7 +129,7 @@
   }
 
   @media screen and (max-width: 540px) {
-    width: 292px;
+    width: 100%;
     margin: 0 auto;
     height: 352px;
     /* margin-bottom: 20px; */
